--- a/training/Resurface_FineTune.ipynb
+++ b/training/Resurface_FineTune.ipynb
@@ -111,14 +111,14 @@
       "cell_type": "code",
       "source": [
         "#@title 5️⃣ Login to Hugging Face (for model access)\n",
-        "from huggingface_hub import login, HfFolder\n",
+        "from huggingface_hub import login, whoami\n",
         "\n",
         "# Check if already logged in\n",
-        "token = HfFolder.get_token()\n",
-        "if token:\n",
-        "    print(\"✅ Already logged in to Hugging Face\")\n",
-        "else:\n",
-        "    print(\"🔑 Need Hugging Face token for Llama access\")\n",
+        "try:\n",
+        "    user = whoami()\n",
+        "    print(f\"✅ Already logged in as: {user['name']}\")\n",
+        "except:\n",
+        "    print(\"🔑 Need Hugging Face token for model access\")\n",
         "    print(\"Get yours at: https://huggingface.co/settings/tokens\")\n",
         "    from getpass import getpass\n",
         "    token = getpass(\"Enter HF token: \")\n",
@@ -136,7 +136,8 @@
         "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
         "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
         "\n",
-        "MODEL_ID = \"meta-llama/Llama-3.1-8B-Instruct\"\n",
+        "# Using Mistral - ungated, works immediately (no Meta approval needed)\n",
+        "MODEL_ID = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
         "\n",
         "# 4-bit quantization for memory efficiency\n",
         "bnb_config = BitsAndBytesConfig(\n",
