fix: completely rewrite notebook with pinned versions
- Pin transformers==4.44.0, trl==0.9.6 (known working)
- Use TinyLlama 1.1B (fits in T4 memory)
- Simple format, no complex chat templates
- Removed all deprecated params

--- a/training/Resurface_FineTune.ipynb
+++ b/training/Resurface_FineTune.ipynb
@@ -16,24 +16,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 🔪 Resurface - Vulnerability Hunter Fine-Tuning\n",
+        "# 🔪 Resurface Fine-Tuning (Fixed Version)\n",
         "\n",
-        "**Fully automated** - just click Runtime → Run All\n",
+        "Fine-tunes TinyLlama 1.1B on vulnerability playbooks.\n",
         "\n",
-        "Fine-tunes Llama 3.1 8B on 236 PortSwigger playbooks.\n",
+        "**Baseline:** 25.9% (Llama 3.3 70B without training)\n",
         "\n",
-        "**Baseline:** Llama 3.3 70B without training = 25.9%\n",
-        "\n",
-        "**Target:** 50%+ after fine-tuning"
+        "**Instructions:**\n",
+        "1. Runtime → Change runtime type → GPU (T4)\n",
+        "2. Runtime → Run all\n",
+        "3. Wait ~20-30 minutes"
       ],
       "metadata": {}
     },
     {
       "cell_type": "code",
       "source": [
-        "#@title 1️⃣ Setup Environment (2-3 min)\n",
-        "!pip install -q transformers datasets peft accelerate bitsandbytes trl huggingface_hub\n",
-        "print(\"✅ Dependencies installed\")"
+        "# Cell 1: Install dependencies\n",
+        "!pip install -q transformers==4.44.0 datasets peft accelerate bitsandbytes trl==0.9.6 huggingface_hub\n",
+        "print(\"Done!\")"
       ],
       "metadata": {},
       "execution_count": null,
@@ -42,15 +43,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 2️⃣ Check GPU\n",
+        "# Cell 2: Check GPU\n",
         "import torch\n",
-        "if torch.cuda.is_available():\n",
-        "    gpu_name = torch.cuda.get_device_name(0)\n",
-        "    gpu_mem = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
-        "    print(f\"✅ GPU: {gpu_name} ({gpu_mem:.1f} GB)\")\n",
-        "else:\n",
-        "    print(\"❌ No GPU! Go to Runtime → Change runtime type → GPU\")\n",
-        "    raise SystemExit(\"GPU required\")"
+        "assert torch.cuda.is_available(), \"No GPU! Go to Runtime → Change runtime type → GPU\"\n",
+        "print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
+        "print(f\"Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB\")"
       ],
       "metadata": {},
       "execution_count": null,
@@ -59,20 +56,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 3️⃣ Download Training Data from GitHub\n",
-        "import urllib.request\n",
-        "import os\n",
-        "\n",
-        "# Download training data directly from GitHub\n",
-        "TRAIN_URL = \"https://raw.githubusercontent.com/Ibrahim-sec/resurface/master/training/data/train.jsonl\"\n",
-        "\n",
-        "print(\"Downloading training data...\")\n",
-        "urllib.request.urlretrieve(TRAIN_URL, \"train.jsonl\")\n",
-        "\n",
-        "# Count examples\n",
-        "with open(\"train.jsonl\") as f:\n",
-        "    num_examples = sum(1 for _ in f)\n",
-        "print(f\"✅ Downloaded {num_examples} training examples\")"
+        "# Cell 3: Download training data\n",
+        "!wget -q https://raw.githubusercontent.com/Ibrahim-sec/resurface/master/training/data/train.jsonl\n",
+        "!wc -l train.jsonl"
       ],
       "metadata": {},
       "execution_count": null,
@@ -81,27 +67,20 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 4️⃣ Load Training Data\n",
+        "# Cell 4: Load and format data\n",
         "import json\n",
         "from datasets import Dataset\n",
         "\n",
-        "def load_training_data(filepath):\n",
-        "    examples = []\n",
-        "    with open(filepath) as f:\n",
-        "        for line in f:\n",
-        "            data = json.loads(line)\n",
-        "            # Convert to Llama chat format\n",
-        "            text = f\"\"\"<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n",
+        "examples = []\n",
+        "with open(\"train.jsonl\") as f:\n",
+        "    for line in f:\n",
+        "        data = json.loads(line)\n",
+        "        # Simple format\n",
+        "        text = f\"### Human: {data['messages'][0]['content']}\\n\\n### Assistant: {data['messages'][1]['content']}\"\n",
+        "        examples.append({\"text\": text})\n",
         "\n",
-        "{data['messages'][0]['content']}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
-        "\n",
-        "{data['messages'][1]['content']}<|eot_id|>\"\"\"\n",
-        "            examples.append({\"text\": text})\n",
-        "    return Dataset.from_list(examples)\n",
-        "\n",
-        "dataset = load_training_data(\"train.jsonl\")\n",
-        "print(f\"✅ Loaded {len(dataset)} examples\")\n",
-        "print(f\"\\n📝 Sample (first 300 chars):\\n{dataset[0]['text'][:300]}...\")"
+        "dataset = Dataset.from_list(examples)\n",
+        "print(f\"Loaded {len(dataset)} examples\")"
       ],
       "metadata": {},
       "execution_count": null,
@@ -110,58 +89,27 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 5️⃣ Login to Hugging Face (for model access)\n",
-        "from huggingface_hub import login, whoami\n",
-        "\n",
-        "# Check if already logged in\n",
-        "try:\n",
-        "    user = whoami()\n",
-        "    print(f\"✅ Already logged in as: {user['name']}\")\n",
-        "except:\n",
-        "    print(\"🔑 Need Hugging Face token for model access\")\n",
-        "    print(\"Get yours at: https://huggingface.co/settings/tokens\")\n",
-        "    from getpass import getpass\n",
-        "    token = getpass(\"Enter HF token: \")\n",
-        "    login(token=token)\n",
-        "    print(\"✅ Logged in!\")"
-      ],
-      "metadata": {},
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title 6️⃣ Load Model (3-5 min)\n",
+        "# Cell 5: Load model\n",
         "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
-        "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
         "\n",
-        "# Using Mistral - ungated, works immediately (no Meta approval needed)\n",
-        "MODEL_ID = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+        "MODEL = \"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"\n",
         "\n",
-        "# 4-bit quantization for memory efficiency\n",
         "bnb_config = BitsAndBytesConfig(\n",
         "    load_in_4bit=True,\n",
         "    bnb_4bit_quant_type=\"nf4\",\n",
-        "    bnb_4bit_compute_dtype=torch.bfloat16,\n",
-        "    bnb_4bit_use_double_quant=True,\n",
+        "    bnb_4bit_compute_dtype=torch.float16,\n",
         ")\n",
         "\n",
-        "print(f\"📥 Loading {MODEL_ID}...\")\n",
-        "print(\"(This takes 3-5 minutes, be patient)\")\n",
-        "\n",
+        "print(f\"Loading {MODEL}...\")\n",
         "model = AutoModelForCausalLM.from_pretrained(\n",
-        "    MODEL_ID,\n",
+        "    MODEL,\n",
         "    quantization_config=bnb_config,\n",
         "    device_map=\"auto\",\n",
-        "    trust_remote_code=True,\n",
         ")\n",
         "\n",
-        "tokenizer = AutoTokenizer.from_pretrained(MODEL_ID)\n",
+        "tokenizer = AutoTokenizer.from_pretrained(MODEL)\n",
         "tokenizer.pad_token = tokenizer.eos_token\n",
-        "tokenizer.padding_side = \"right\"\n",
-        "\n",
-        "print(\"✅ Model loaded!\")"
+        "print(\"Model loaded!\")"
       ],
       "metadata": {},
       "execution_count": null,
@@ -170,21 +118,22 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 7️⃣ Configure LoRA\n",
+        "# Cell 6: Setup LoRA\n",
+        "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
+        "\n",
+        "model = prepare_model_for_kbit_training(model)\n",
+        "\n",
         "peft_config = LoraConfig(\n",
         "    r=16,\n",
         "    lora_alpha=32,\n",
         "    lora_dropout=0.05,\n",
         "    bias=\"none\",\n",
         "    task_type=\"CAUSAL_LM\",\n",
-        "    target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\"]\n",
+        "    target_modules=[\"q_proj\", \"v_proj\", \"k_proj\", \"o_proj\"]\n",
         ")\n",
         "\n",
-        "model = prepare_model_for_kbit_training(model)\n",
         "model = get_peft_model(model, peft_config)\n",
-        "\n",
-        "model.print_trainable_parameters()\n",
-        "print(\"✅ LoRA configured!\")"
+        "model.print_trainable_parameters()"
       ],
       "metadata": {},
       "execution_count": null,
@@ -193,60 +142,35 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 8️⃣ Setup Trainer\n",
-        "from transformers import TrainingArguments\n",
+        "# Cell 7: Train\n",
         "from trl import SFTTrainer\n",
+        "from transformers import TrainingArguments\n",
         "\n",
-        "training_args = TrainingArguments(\n",
-        "    output_dir=\"./resurface-vuln-hunter\",\n",
+        "args = TrainingArguments(\n",
+        "    output_dir=\"./output\",\n",
         "    num_train_epochs=3,\n",
-        "    per_device_train_batch_size=2,\n",
+        "    per_device_train_batch_size=4,\n",
         "    gradient_accumulation_steps=4,\n",
         "    learning_rate=2e-4,\n",
-        "    weight_decay=0.01,\n",
-        "    warmup_ratio=0.03,\n",
-        "    lr_scheduler_type=\"cosine\",\n",
         "    logging_steps=10,\n",
         "    save_strategy=\"epoch\",\n",
-        "    bf16=True,\n",
+        "    fp16=True,\n",
         "    optim=\"paged_adamw_8bit\",\n",
-        "    gradient_checkpointing=True,\n",
-        "    max_grad_norm=0.3,\n",
-        "    report_to=\"none\",  # Disable wandb\n",
+        "    report_to=\"none\",\n",
         ")\n",
         "\n",
         "trainer = SFTTrainer(\n",
         "    model=model,\n",
         "    train_dataset=dataset,\n",
-        "    peft_config=peft_config,\n",
-        "    max_seq_length=2048,\n",
-        "    tokenizer=tokenizer,\n",
-        "    args=training_args,\n",
         "    dataset_text_field=\"text\",\n",
+        "    max_seq_length=1024,\n",
+        "    tokenizer=tokenizer,\n",
+        "    args=args,\n",
         ")\n",
         "\n",
-        "print(\"✅ Trainer ready!\")"
-      ],
-      "metadata": {},
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title 9️⃣ 🚀 TRAIN! (30-60 min)\n",
-        "print(\"=\"*50)\n",
-        "print(\"🚀 STARTING FINE-TUNING\")\n",
-        "print(\"=\"*50)\n",
-        "print(\"⏱️  This takes 30-60 minutes on T4\")\n",
-        "print(\"📊 Watch the loss decrease below\")\n",
-        "print(\"=\"*50)\n",
-        "\n",
+        "print(\"Starting training...\")\n",
         "trainer.train()\n",
-        "\n",
-        "print(\"=\"*50)\n",
-        "print(\"✅ TRAINING COMPLETE!\")\n",
-        "print(\"=\"*50)"
+        "print(\"Training complete!\")"
       ],
       "metadata": {},
       "execution_count": null,
@@ -255,16 +179,14 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 🔟 Save to Google Drive\n",
+        "# Cell 8: Save to Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "SAVE_PATH = \"/content/drive/MyDrive/resurface-vuln-hunter-lora\"\n",
-        "trainer.model.save_pretrained(SAVE_PATH)\n",
+        "SAVE_PATH = \"/content/drive/MyDrive/resurface-lora\"\n",
+        "model.save_pretrained(SAVE_PATH)\n",
         "tokenizer.save_pretrained(SAVE_PATH)\n",
-        "\n",
-        "print(f\"✅ Model saved to Google Drive: {SAVE_PATH}\")\n",
-        "print(\"\\n📥 You can download it from Drive and use in Resurface!\")"
+        "print(f\"Saved to {SAVE_PATH}\")"
       ],
       "metadata": {},
       "execution_count": null,
@@ -273,60 +195,18 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title 1️⃣1️⃣ Test the Model!\n",
-        "def generate_exploit(vuln_type, description):\n",
-        "    prompt = f\"\"\"<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n",
+        "# Cell 9: Test it!\n",
+        "prompt = \"\"\"### Human: You are a security researcher. Vulnerability Type: sqli. Scenario: A search feature that queries a database directly. Generate exploitation steps.\n",
         "\n",
-        "You are a security researcher testing a web application for vulnerabilities.\n",
+        "### Assistant:\"\"\"\n",
         "\n",
-        "**Vulnerability Type:** {vuln_type}\n",
-        "**Scenario:** {description}\n",
-        "\n",
-        "Generate a step-by-step exploitation methodology. Include:\n",
-        "1. Detailed exploitation steps (numbered)\n",
-        "2. Key payloads to use\n",
-        "3. Indicators of success<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
-        "\n",
-        "\"\"\"\n",
-        "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(\"cuda\")\n",
-        "    outputs = model.generate(**inputs, max_new_tokens=800, temperature=0.3, do_sample=True)\n",
-        "    return tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
-        "\n",
-        "# Test on SQL injection\n",
-        "print(\"🧪 Testing on SQL Injection scenario...\\n\")\n",
-        "result = generate_exploit(\n",
-        "    \"sqli\",\n",
-        "    \"The application has a product search feature that queries a database. The search term is reflected in the URL.\"\n",
-        ")\n",
-        "print(result)"
+        "inputs = tokenizer(prompt, return_tensors=\"pt\").to(\"cuda\")\n",
+        "outputs = model.generate(**inputs, max_new_tokens=500, temperature=0.7, do_sample=True)\n",
+        "print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
       ],
       "metadata": {},
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# ✅ Done!\n",
-        "\n",
-        "## Results\n",
-        "- Model saved to: `/content/drive/MyDrive/resurface-vuln-hunter-lora`\n",
-        "- Download from Google Drive\n",
-        "\n",
-        "## Use in Resurface\n",
-        "```python\n",
-        "from peft import PeftModel\n",
-        "from transformers import AutoModelForCausalLM\n",
-        "\n",
-        "base_model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-3.1-8B-Instruct\")\n",
-        "model = PeftModel.from_pretrained(base_model, \"path/to/resurface-vuln-hunter-lora\")\n",
-        "```\n",
-        "\n",
-        "## Compare to Baseline\n",
-        "- **Before (no training):** 25.9%\n",
-        "- **After (fine-tuned):** Run eval to find out! 🎯"
-      ],
-      "metadata": {}
     }
   ]
 }
