fix: pin transformers 4.40.0 for Colab compatibility

--- a/training/Resurface_FineTune.ipynb
+++ b/training/Resurface_FineTune.ipynb
@@ -32,9 +32,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cell 1: Install dependencies\n",
-        "!pip install -q transformers==4.44.0 datasets peft accelerate bitsandbytes trl==0.9.6 huggingface_hub\n",
-        "print(\"Done!\")"
+        "# Cell 1: Install dependencies (pinned for Colab Feb 2026)\n",
+        "!pip uninstall -y -q transformers\n",
+        "!pip install -q transformers==4.40.0 datasets peft accelerate bitsandbytes==0.43.0 trl==0.9.6 huggingface_hub\n",
+        "print(\"✅ Done! Now RESTART RUNTIME (Runtime → Restart runtime) then run from Cell 2\")"
       ],
       "metadata": {},
       "execution_count": null,
